--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - checkout
       - run: sudo apt-get update
-      - run: sudo apt-get install -y libldap-2dev build-essential
+      - run: sudo apt-get install -y libldap2-dev build-essential
       - run: ruby extconf.rb --with-openldap2
       - run: sudo apt-get install libsasl2-dev
       - run: make clean
